Refactored register post type due to the WPML translation bug, squished a couple of bugs

--- a/assets/css/scss/blocks/_b-footer.scss
+++ b/assets/css/scss/blocks/_b-footer.scss
@@ -32,6 +32,7 @@
 
 		&__column {
 			@include make-xs-column(12);
+			@include font-size(sm);
 		}
 	}
 
